@@ -1,6 +1,7 @@
 == 1.2.5 ==
   * Added minimum_sleep to the threaded tick runner.  This helps the OS to give control to better manage control between threads.
   * Removed ez_setup from the directory structure
+  * Fixed the messageID generator already executing bug.  Python generators are not thread safe.
 == 1.2.4 ==
   * Fixed threads timing issue by changing to a cross-platform timing function
   * Changed so that child threads update at 30 milliseconds interval
